--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,56 @@
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Carter+One&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+:root {
+  --hbg-clr:  #E17918; 
+  --malmo-clr: #9A0000;
+  --ocean-clr: #A1574D;
+  --main-dark: #1A1A1A;
+  --darker-dark: #131314;
+  --main-font: 'Teko', sans-serif;
+  --secondary-font: 'Carter One', cursive;
+}
+
+html, body {
+  background-color: var(--main-dark);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+li {
+  list-style: none;
+}
+
+.container {
+  width: min(70%, 1200px);
+  margin: auto;
+}
+
+.orange {
+  color: var(--hbg-clr);
+}
+
+.red {
+  color: var(--malmo-clr);
+}
+
+.pink {
+  color: var(--ocean-clr);
+}
+
+.btn {
+  padding: 8em 2em;
+  border: 3px solid transparent;
+  background: transparent;
+  cursor: pointer;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: bold;
 }
