--- a/src/Components/BookSection/BookSection.css
+++ b/src/Components/BookSection/BookSection.css
@@ -1,5 +1,5 @@
 .BookSection {
-    background: #141313;
+    background: var(--main-dark);
     padding-block: 4rem;
     display: flex;
     flex-direction: column;
@@ -10,6 +10,7 @@
 
 .BookSection .header {
     text-transform: uppercase;
+    font-family: var(--main-font);
 }
 
 .BookSection p {
