--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,51 +1,146 @@
-.Navbar .container {
-    width: 80%;
-}
 .Navbar a {
     text-decoration: none;
-    color: #fff;
-    text-transform: uppercase;
-    font-family: var(--main-font);
 }
-.Navbar li {
-    list-style: none;
+.fixed {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 2;
 }
 .Navbar .navbar-wrapper {
     display: flex;
-    background-color: transparent;
-    position: fixed;
+    justify-content: space-between;
+}
+.Navbar .container {
+    width: min(90%, 1200px) ;
+}
+.color {
+    background: rgba(0, 0, 0, 0.715);
+}
+.transparent {
+    background: transparent;
 }
 /* ----- LOGO ----- */
 .Navbar .logo-wrapper {
-    width: 400px;
-    height: 800px;
+    opacity: 0%;
+    padding: 10px;
+    width: 150px;
 }
 .Navbar .logo {
     object-fit: cover;
-    width: 40%;
-    background-color: var(--hbg-clr);
+    width: 100%;
+}
+.Navbar .show {
+    opacity: 100%;
+    transition: all ease-in 1s;
 }
 
-/* ----- NAV LINKS ----- */
-.Navbar .nav-link-wrapper {
-    display: flex;
-    justify-content: space-evenly;
+/* ----- RIGHT NAV ----- */
+.Navbar .right-nav-div {
     width: 50%;
-    flex-direction: row;
 }
 
-.Navbar .link-wrapper {
-    background-color: var(--hbg-clr);
-    width: 150px;
-    height: 75px;
-    text-align: center; 
-    justify-content: center;
+/* ----- HAMBURGER ----- */
+.Navbar .burger {
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 50px;
+    height: 45px;
+    padding: 10px;
+    cursor: pointer;
+    overflow: hidden;
+    margin-top: .5rem;
 }
 
-.Navbar .link {
-    font-size: 30px;
-    background-color: var(--hbg-clr); 
+.Navbar .burger span {
+    width: 100%;
+    height: 3px;
+    background: var(--hbg-clr);
+    transition: all 250ms;
+    border-radius: 2px;
+}
+
+.Navbar .burger.open span:nth-child(1) {
+    transform: translateY(13px) rotate(45deg);
+    width: 2.2rem;
+}
+
+.Navbar .burger.open span:nth-child(2) {
+    opacity: 0;
+}
+
+.Navbar .burger.open span:nth-child(3) {
+    transform: translateY(-9px) rotate(-45deg);
+    width: 2.2rem;
+}
+
+
+/* ----- HAMBURGER MENU ----- */
+
+.Navbar .menu-container {
+    background-color: var(--main-dark);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+}
+
+.Navbar .ham-links-wrapper {
+    width: 70%;
+    display: flex;
+    justify-content: center;
     align-items: center;
-    margin-top: 1.3rem;
+    margin: auto;
+    height: 100%;
+    width: 100%;
+}
+.Navbar .ham-links-wrapper li {
+    text-align: center;
+    font-size: 50px;
+}
+.Navbar .link {
+    color: #fff;
+    text-transform: uppercase;
+    font-family: var(--main-font);
+    font-weight: 100;
+    cursor: pointer;
+    font-size: 60px;
+}
+.Navbar .link:active {
+    color: var(--hbg-clr);
+}
+
+/* ---- DROPDOWN ---- */
+.Navbar .link-dd {
+    position: relative;
+}
+.Navbar .link-dd:active {
+    color: var(--hbg-clr);
+}
+
+.Navbar .link-dd::before {
+    content: url('../../Img/32px.png');
+    position: absolute;
+    right: -1rem;
+}
+.Navbar .link-dd:active:before {
+    content: url('../../Img/32pxOrange.png');
+    position: absolute;
+    right: -1rem;
+}
+
+.Navbar .small-link {
+    color: #fff;
+    font-size: 35px;
+    text-transform: uppercase;
+    font-family: var(--main-font);
+}
+.Navbar .small-link:active {
+    color: var(--hbg-clr);
+}
+.Navbar .dropdown {
+    margin-bottom: 1rem;
 }
