--- a/src/Components/BookSection/BookSection.css
+++ b/src/Components/BookSection/BookSection.css
@@ -11,6 +11,7 @@
 .BookSection .header {
     text-transform: uppercase;
     font-family: var(--main-font);
+    font-size: 2.5rem;
 }
 
 .BookSection p {
