--- a/src/Components/AboutSection/AboutSection.css
+++ b/src/Components/AboutSection/AboutSection.css
@@ -41,6 +41,8 @@
     height: 300px;
 }
 
+/* ----- BUTTON ----- */
+
 .AboutSection .btn-about {
     border: 1px solid white;
     margin-top: 1rem;
