--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 :root {
   --hbg-clr:  #E17918; 
   --malmo-clr: #9A0000;
-  --ocean-clr: #A1574D;
+  --ocean-clr: #aa6256;
   --main-dark: #141313;
   --darker-dark: #131314;
   --main-font: 'Teko', sans-serif;
