--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -4,18 +4,14 @@
     padding-block: 2rem;
 }
 
-.Footer .container {
-    display: flex;
-    justify-content: space-between;
-}
 .Footer .wrapper {
     display: flex;
     justify-content: space-between;
     width: 100%;
 }
 .Footer .icon-wrapper {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     border-radius: 50px;
     display: flex;
     justify-content: center;
@@ -31,27 +27,45 @@
 .Footer .icon-wrapper.pink {
     background: var(--ocean-clr);
 }
+
 .Footer .icon {
     color: #fff;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
 }
 
-.Footer .img-div {
-    height: 200px;
-    position: relative;
+.Footer .icon-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.Footer .icon-container p {
+    color: #fff;
+    margin-top: 1rem;
+    font-size: 16px;
 }
 
-.Footer .img-div::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background-color: rgba(0, 0, 0, 0.54);
+.Footer .line {
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    margin-top: 1rem;
 }
 
-.Footer .img-div img{
-    height: 100%;
+@media (min-width: 992px) {
+    .BookSection {
+        flex-direction: row;
+    }
+
+    .BookSection .img-div {
+        height: 400px;
+        width: 400px;
+    }
+
 }
+
+
 
 
 
