--- a/src/Components/ReviewSection/ReviewSection.css
+++ b/src/Components/ReviewSection/ReviewSection.css
@@ -46,13 +46,13 @@
     content: open-quote;
     font-size: 2rem;
     font-family: serif;
-    margin-right: .5rem;
+    /* margin-right: .5rem; */
 }
 .ReviewSection .quote::after {
     content: close-quote;
     font-size: 2rem;
     font-family: serif;
-    margin-left: .5rem;
+    /* margin-left: .5rem; */
 }
 
 .ReviewSection:hover .quote{
