--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
 html, body {
   background-color: var(--main-dark);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  overflow-y: hidden;
 }
 
 a {
